array.island.Island.scala.error
Compilation error:
Island:7: error: identifier expected but integer literal found.
  if (lenght(num)==1 || ((lenght.num==2) && num[0]==num[1])){
                                                ^Island:17: error: ']' expected but '}' found.
} 
^